style3.css
.results {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    padding: 20px;

}

@media (max-width: 768px) {
    .results {
        grid-template-columns: 1fr;
    }
}

body {
    margin: 0;
    background-color: antiquewhite;
    text-align: center;

}

.text {
    background-color: aliceblue;
    text-align: center;
    height: 100px;
    display: flex;
    justify-content: center;


}

.text h1 {
    font-size: 30px;
    letter-spacing: 2px;
    color: black;

}



.card {

    width: 400px;
    height: 450px;
    background-color: rgb(237, 231, 225);
    text-align: center;
    margin-top: 25px;
    right: 30px;


    border-radius: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);

}

.card:hover {
    transform: translateY(-2px);
    cursor: pointer;
}



.card img {
    width: 400px;
    height: 350px;
    object-fit: cover;
    overflow: hidden;
    border-radius: 20px 20px 0px 0px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);

}

.card button {

    margin-top: -10px;
    padding: 7px 20px;
    border: none;
    border-radius: 20px;
    cursor: pointer;
    background-color: rgb(127, 223, 255);
    font-size: 20px;
}

.card button:hover {
    background-color: rgb(0, 123, 255);
}

.card h3 {

    font-size: 20px;
    color: black;
}

.card a {
    text-decoration: none;
}

